tests/neg-custom-args/captures/try.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:24:32 ------------------------------------------
24 |    (x: CanThrow[Exception]) => x  // error
   |                                ^
   |                                Found:    (x : CT[Exception]^{lcap})
   |                                Required: CT[Exception]^?
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/try.scala:30:65 ---------------------------------------------------------------
30 |    (x: CanThrow[Exception]) => () => raise(new Exception)(using x) // error
   |                                                                 ^
   |          (x : CT[Exception]^{lcap}) cannot be referenced here; it is not included in the allowed capture set {}
   |          of an enclosing function literal with expected type () ->? Nothing
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/try.scala:52:2 -------------------------------------------
47 |val global: () -> Int = handle {
48 |  (x: CanThrow[Exception]) =>
49 |    () =>
50 |      raise(new Exception)(using x)
51 |      22
52 |} {  // error
   |                        ^
   |                        Found:    () ->{x$0, lcap} Int
   |                        Required: () -> Int
53 |  (ex: Exception) => () => 22
54 |}
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/try.scala:35:11 ---------------------------------------------------------------
35 |  val xx = handle {  // error
   |           ^^^^^^
   |           escaping local reference lcap.type
